codama-syn-helpers/tests/meta/as_path/from_expr.fail.stderr
error: expected a path
 --> tests/meta/as_path/from_expr.fail.rs:3:11
  |
3 | #[as_path("hello")]
  |           ^^^^^^^
